<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/et_oper1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter number"/>

    <EditText
        android:id="@+id/et_oper2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter number"/>

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="+"
            android:textColor="@color/purple_200" />

        <Button
            android:id="@+id/btn_minus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="-"
            android:textColor="@color/purple_200" />

        <Button
            android:id="@+id/btn_multiply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="*"
            android:textColor="@color/purple_200" />

        <Button
            android:id="@+id/btn_division"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="/"
            android:textColor="@color/purple_200" />

    </LinearLayout>

</LinearLayout>